# TriCRF

./: .gitignore  CMakeLists.txt  README.md  USAGE_EXAMPLES.md  build.sh
example/: example_fixed.cfg
src/: CRF.cpp  CRF.h  Data.h  Evaluator.cpp  LBFGS.cpp  LBFGS.h  Main.cpp  MaxEnt.cpp  MaxEnt.h  Param.h  TriCRF1.cpp  TriCRF1.h  TriCRF2.cpp  TriCRF2.h  TriCRF3.cpp  TriCRF3.h  Utility.h
